--- a/prepros-6.config
+++ b/prepros-6.config
@@ -30,9 +30,11 @@
       "path": "scss/style.scss",
       "imports": [
         "scss/_var.scss",
-        "scss/_layout.scss",
+        "scss/_curve.scss",
         "scss/_header.scss",
-        "scss/_footer.scss"
+        "scss/_footer.scss",
+        "scss/_contents.scss",
+        "scss/_text.scss"
       ]
     },
     {
@@ -43,7 +45,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
