--- a/prepros-6.config
+++ b/prepros-6.config
@@ -31,10 +31,11 @@
       "imports": [
         "scss/_var.scss",
         "scss/_curve.scss",
+        "scss/_text.scss",
         "scss/_header.scss",
         "scss/_footer.scss",
         "scss/_contents.scss",
-        "scss/_text.scss"
+        "scss/_rwd.scss"
       ]
     },
     {
