remove curve, try header_triangle

--- a/scss/prepros-6.config
+++ b/scss/prepros-6.config
@@ -1,18 +1,15 @@
 {
-  "name": "web_excelVBA",
+  "name": "scss",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [
     {
-      "path": "scss/style.scss",
+      "path": "style.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
-    "expandedDirs": [
-      "css",
-      "scss"
-    ],
+    "expandedDirs": [],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -27,19 +24,18 @@
   },
   "imports": [
     {
-      "path": "scss/style.scss",
+      "path": "style.scss",
       "imports": [
-        "scss/_var.scss",
-        "scss/_text.scss",
-        "scss/_layout.scss",
-        "scss/_curve.scss",
-        "scss/_header.scss",
-        "scss/_areaInfo.scss",
-        "scss/_areaContent1.scss",
-        "scss/_areaContent2.scss",
-        "scss/_areaContent3.scss",
-        "scss/_areaContact.scss",
-        "scss/_footer.scss"
+        "_var.scss",
+        "_text.scss",
+        "_curve.scss",
+        "_header.scss",
+        "_areaInfo.scss",
+        "_areaContent1.scss",
+        "_areaContent2.scss",
+        "_areaContent3.scss",
+        "_areaContact.scss",
+        "_footer.scss"
       ]
     }
   ],
